Fixed bug and updated readme

--- a/santa.conf.example
+++ b/santa.conf.example
@@ -1,4 +1,4 @@
 [email data]
 masterEmail = "email@domain.com"
 masterPass = "PasswordToEmail"
-listFile = "exchangeList.txt"
+listFile = exchangeList.txt
